[package]
name = "matching"
version = "0.1.0"
authors = ["Kevin W Matthews <KevinWMatthews@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "copy_types"
path = "src/copy_types.rs"

[[bin]]
name = "copy_type_references"
path = "src/copy_type_references.rs"
